POM design pattern created

--- a/CommonLibs/CommonLibs.csproj
+++ b/CommonLibs/CommonLibs.csproj
@@ -54,6 +54,7 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Implementation\CommonDriver.cs" />
+    <Compile Include="Implementation\CommonElement.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
