--- a/SeleniumAutomationFrameworkTests/SeleniumAutomationFrameworkTests.csproj
+++ b/SeleniumAutomationFrameworkTests/SeleniumAutomationFrameworkTests.csproj
@@ -54,7 +54,8 @@
   <ItemGroup>
     <Compile Include="Class1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Tests\HomePageTests.cs" />
+    <Compile Include="Tests\BaseTests.cs" />
+    <Compile Include="Tests\LoginPageTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
